[package]
name = "quiet-cli"
version = "0.0.5"
edition = "2024"
authors = ["miviodev <miviodev@gmail.com>"]
license = "MIT"
repository = "https://gitea.com/miviodev/quiet"
keywords = ["cli", "command", "silent", "cross-platform", "quiet"]
description = "Run commands silently. Show only stderr or exit code"
categories = ["command-line-utilities"]
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true  
panic = "abort"    
[[bin]]
name = "quiet"
path = "src/main.rs"
